syntax = "proto3";

package user.v1;
option go_package = "user/v1;userv1";

service UserService {
  rpc get(UserRequest) returns (UserResponse);
}
message UserRequest{
  int64 id = 1;
}
message UserResponse{
  int64 id = 1;
  string userName = 2;
  int64 age = 3;
  bool isActive = 4;
}